# SnakeSFML

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SnakeSfml.sln  bundle.cmake
SnakeSfml/: Apple.cpp  Apple.hpp  Button.cpp  Button.hpp  Game.hpp  GameScene.hpp  LocaleLoader.hpp  Main.cpp  Snake.hpp  SnakeSfml.vcxproj  SnakeSfml.vcxproj.filters  TileType.hpp
SnakeSfml/Resources/Locales/en/: data  main.locale
SnakeSfml/Resources/Locales/ru/: main.locale
SnakeSfml/Resources/Locales/zh-CN/: data
SnakeSfml/Source/: Apple.cpp  Apple.hpp  Game.cpp  Game.hpp  GameScene.hpp  Snake.cpp
SnakeSfml/Source/Localization/: Locale.cpp  Locale.hpp  LocaleLoader.cpp  LocaleLoader.hpp  LocaleManager.cpp  LocaleManager.hpp
SnakeSfml/Source/TileMap/: TileMap.cpp  TileMap.hpp  TileType.hpp
SnakeSfml/Source/UI/: Anchor.hpp  Button.cpp  Button.hpp  HBox.cpp  HBox.hpp  Layout.cpp  Layout.hpp  LayoutAngle.hpp  Padding.cpp  Padding.hpp  Text.cpp  Text.hpp  UIElement.cpp  UIElement.hpp  VBox.cpp  VBox.hpp
data/Locales/ru/: data
include/: Game.hpp  Snake.hpp
include/UI/: Button.hpp  HBox.hpp  Layout.hpp  Text.hpp  UIElement.hpp  VBox.hpp
src/: Apple.cpp  CMakeLists.txt  Game.cpp  Game.hpp  Gui.cpp  Gui.hpp  Main.cpp
src/Localization/: CMakeLists.txt  Locale.cpp  Locale.hpp  LocaleManager.cpp  LocaleManager.hpp
src/Resource/: CMakeLists.txt  FontHolder.cpp  FontHolder.hpp  ResourceHolder.hpp  ResourceHolder.inl
src/TileMap/: CMakeLists.txt  TileMap.cpp  TileMap.hpp
src/UI/: Button.cpp  CMakeLists.txt  HBox.cpp  Layout.cpp  Padding.cpp  Text.cpp  UIElement.cpp  VBox.cpp
src/Utility/: Paths.hpp
src/Utils/: Vector2Mul.hpp
src/Widgets/: Anchor.cpp  Anchor.hpp  Button.cpp  Button.hpp  CMakeLists.txt  HBox.cpp  HBox.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  Padding.cpp  Padding.hpp  Text.cpp  Text.hpp  VBox.cpp  VBox.hpp  Widget.cpp  Widget.hpp
src/whereami/: CMakeLists.txt  wrapper.cpp  wrapper.hpp
